- Fix bug where external repositories were not used.   Patch submitted by David Oxley <dave at staffplanner.co.uk> - getURL returned invalid URLs. Unfortunately, fixing this will break the security   manager under Windows using the default policy file. The workaround is easy,   as the entries should be modified from:    grant codeBase "file:${catalina.home}/server/webapps/admin/WEB-INF/lib/struts.jar"   to    grant codeBase  "file:/${catalina.home}/server/webapps/admin/WEB-INF/lib/struts.jar"   (note the extra '/') - It will be mentioned in the release notes.
git-svn-id: https://svn.apache.org/repos/asf/tomcat@288473 13f79535-47bb-0310-9956-ffa450edef68