@@ -951,6 +951,10 @@ public class WebappClassLoader
                 log("      findClassInternal(" + name + ")");
             try {
                 clazz = findClassInternal(name);
+            } catch(ClassNotFoundException cnfe) {
+                if (!hasExternalRepositories) {
+                    throw cnfe;
+                }
             } catch(AccessControlException ace) {
                 ace.printStackTrace();
                 throw new ClassNotFoundException(name);
@@ -2040,7 +2044,9 @@ public class WebappClassLoader
         } catch (IOException e) {
             // Ignore
         }
-        return new URL("file:" + realFile.getPath());
+
+        //return new URL("file:" + realFile.getPath());
+        return realFile.toURL();
 
     }
 
